<?xml version="1.0"?>
<package format="3">
  <name>driver_bringup</name>
  <version>1.0.0</version>
  <description>Launch and config files for airy radar driver bringup</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rslidar_sdk</exec_depend>
  <exec_depend>fines_serial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
